# dodo-payments-assignment

./: .env.example  .gitignore  AI_USAGE.md  Cargo.toml  DESIGN.md  Dockerfile.invoice-service  Dockerfile.mock-psp  README.md  REQUIREMENT.md  docker-compose.yml  rustfmt.toml
.cargo/: config.toml
.github/instructions/: general.instructions.md
crates/libs/lib-auth/: Cargo.toml
crates/libs/lib-auth/src/: lib.rs  middleware.rs  token.rs
crates/libs/lib-core/: Cargo.toml
crates/libs/lib-core/src/: config.rs  ctx.rs  error.rs  lib.rs
crates/libs/lib-core/src/bmc/: customer.rs  invoice.rs  mod.rs  payment.rs  webhook.rs
crates/libs/lib-core/src/model/: business.rs  customer.rs  invoice.rs  mod.rs  payment.rs  webhook.rs
crates/services/invoice-service/: Cargo.toml
crates/services/invoice-service/src/: main.rs
crates/services/invoice-service/src/routes/: mod.rs
crates/services/invoice-service/src/routes/v1/: customers.rs  invoices.rs  mod.rs  payments.rs  webhooks.rs
crates/services/invoice-service/src/services/: mod.rs  payment_reconciliation.rs  psp_client.rs  webhook_dispatcher.rs  webhook_retry.rs
crates/services/invoice-service/tests/: customer_tests.rs  e2e_tests.rs  helpers.rs  invoice_tests.rs  payment_tests.rs  webhook_tests.rs
crates/services/mock-psp/: Cargo.toml
crates/services/mock-psp/src/: main.rs
docs/: API.md
migrations/: 20240101000002_seed_data.sql  20260530000001_initial_schema.sql
