[workspace]
members = [
    "crates/libs/lib-core",
    "crates/libs/lib-auth",
    "crates/services/invoice-service",
    "crates/services/mock-psp",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "cors", "timeout"] }
hyper = { version = "1" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2"
anyhow = "1"
dotenvy = "0.15"

# HTTP client (for calling mock PSP)
reqwest = { version = "0.12", features = ["json"] }

# Crypto (for API key hashing & webhook signing)
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
rand = "0.8"

# OpenAPI documentation
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# URL parsing
url = "2"
once_cell = "1"
