[package]
name = "lib-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
# Serialization
serde.workspace = true
serde_json.workspace = true

# Database
sqlx.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
dotenvy.workspace = true

# Web (for IntoResponse on AppError)
axum.workspace = true

# OpenAPI schema generation
utoipa.workspace = true
